snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-sources.jar.sha1
a7bf66579085dc385b48eff7db6a278be2457480